--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "enzyme-to-json": "^3.3.5",
+    "firebase": "^5.11.1",
     "next": "^8.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1",
-    "enzyme-to-json": "^3.3.5"
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.4.4",
